// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> with \`digits\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 iikjLD"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`disabled\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 ilMIhk"
  disabled={true}
  name="text"
/>
`;

exports[`<TextInput /> with \`error\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 qldNZ"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`name\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 ilMIhk"
  disabled={false}
  name="foobar"
/>
`;

exports[`<TextInput /> with \`tag\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 ilMIhk"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`tiny\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 bXbHeB"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`valid\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 LSiDR"
  disabled={false}
  name="text"
/>
`;
